--- a/belaz/index.html
+++ b/belaz/index.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Белазы</title>
-
-    <!-- font awesome -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <!-- подключаем стили  -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -208,7 +204,7 @@
                     <div data-li="1" class="modal-li">
                         <div class="treug"></div>
                         <div class="modal-li-wrap">
-                            <button id="closed">&times;</button>
+                            <button class="closed">&times;</button>
                             <div class="modal-li-text">
                                 <span>
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
@@ -228,7 +224,7 @@
                     <div data-li="2" class="modal-li">
                         <div class="treug"></div>
                         <div class="modal-li-wrap">
-                            <button id="closed">&times;</button>
+                            <button class="closed">&times;</button>
                             <div class="modal-li-text">
                                 <span>
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
@@ -247,7 +243,7 @@
                     <div class="modal-li" data-li="3">
                         <div class="treug"></div>
                         <div class="modal-li-wrap">
-                            <button id="closed">&times;</button>
+                            <button class="closed">&times;</button>
                             <div class="modal-li-text">
                                 <span>
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
@@ -267,7 +263,7 @@
                     <div class="modal-li" data-li="4">
                         <div class="treug"></div>
                         <div class="modal-li-wrap">
-                            <button id="closed">&times;</button>
+                            <button class="closed">&times;</button>
                             <div class="modal-li-text">
                                 <span>
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
@@ -286,7 +282,7 @@
                         деталей?</span>
                     <div class="modal-li" data-li="5">
                         <div class="treug"></div>
-                        <button id="closed">&times;</button>
+                        <button class="closed">&times;</button>
                         <div class="modal-li-wrap">
                             <div class="modal-li-text">
                                 <span>
@@ -355,7 +351,8 @@
     <section class="service">
         <div class="container">
             <h2>
-                У нас в штате есть мобильные бригады, готовые выехать на сервисное обслуживание, ремонт и проведение диагностики!
+                У нас в штате есть мобильные бригады, готовые выехать на сервисное обслуживание, ремонт и проведение
+                диагностики!
             </h2>
             <div class="service-block">
                 <div class="service-item">
@@ -367,7 +364,8 @@
                 <div class="service-item">
                     <div class="service-item__img"><img src="img/service2.png" alt=""></div>
                     <div class="service-item__text">
-                        Бригады укомплектованы всем&nbsp;необходимым оборудованием для производства работ любой&nbsp;сложности
+                        Бригады укомплектованы всем&nbsp;необходимым оборудованием для производства работ
+                        любой&nbsp;сложности
                     </div>
                 </div>
                 <div class="service-item">
@@ -386,13 +384,13 @@
                 Если Вам необходима бесплатная консультация по вопросу обслуживания
             </h2>
             <p class="call-form-info">
-                    Звоните нам по телефону:<br>
-                    <span> +7 (818) 247-47-25</span>
-                </p>
+                Звоните нам по телефону:<br>
+                <span> +7 (818) 247-47-25</span>
+            </p>
             <form class="call-form">
-                    <label for="tel3"><input type="tel" id="tel3" class="phone" placeholder="Введите ваш телефон"></label>
-                    <button class="call-form-btn">Перезвонить сейчас</button>
-                </form>
+                <label for="tel3"><input type="tel" id="tel3" class="phone" placeholder="Введите ваш телефон"></label>
+                <button class="call-form-btn">Перезвонить сейчас</button>
+            </form>
         </div>
     </section>
 
@@ -407,17 +405,24 @@
         </div>
     </section>
     <section class="map">
-            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abca1296ee21d6fc2750b0835a279b53dfce45b3e1ea7579f4d8c96933b73c0b8&amp;width=100%25&amp;height=375&amp;lang=ru_RU&amp;scroll=true"></script>
+        <script type="text/javascript" charset="utf-8" async
+            src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abca1296ee21d6fc2750b0835a279b53dfce45b3e1ea7579f4d8c96933b73c0b8&amp;width=100%25&amp;height=375&amp;lang=ru_RU&amp;scroll=true">
+        </script>
     </section>
 
     <footer class="footer">
         <div class="container">
             <div class="footer-block">
                 <div class="footer-item"><img class="logo" src="img/logo.png" alt="logo"></div>
-                <div class="footer-item"><p class="made">Сделал Султан Алибеков</p></div>
+                <div class="footer-item">
+                    <p class="made">Сделал Султан Алибеков</p>
+                </div>
             </div>
         </div>
     </footer>
+
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- jQuery first, then Popper.js-->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js">
